--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -31,12 +31,14 @@ html,body{
 	100%{background-image: url("../images/homeBackground2.jpg");}
 }
 
+
+
 .namePosition{
 	position: absolute;
-	left: 40%;
-	bottom:  -20%;
+	left: 35%;
+	bottom:  -30%;
 	color: #05E9DD;
-	font-size: 4vw;
+	font-size: 5vw;
 	font-family: helvetica;
 	animation: name;
 	animation-duration: 4s;
@@ -46,17 +48,17 @@ html,body{
 
 
 @keyframes name{
-	0%{bottom:  -20%;left: 40%}
-	100%{left: 40%;bottom:  15%;}
+	0%{bottom:  -30%;left: 35%}
+	100%{left: 35%;bottom:  8%;}
 }
 
 
 .headingPosition{
 	position: absolute;
-	left: 35%;
-	top: -20%;
+	left: 30%;
+	top: -30%;
 	color: #9D0DEE;
-	font-size: 5vw;
+	font-size: 6vw;
 	font-family: helvetica;
 	font-style: italic;
 	font-weight: bold; 
@@ -67,8 +69,8 @@ html,body{
 }
 
 @keyframes heading{
-	0%{top: -20%;left: 35%}
-	100%{left: 35%;top: 4%;}
+	0%{top: -30%;left: 30%}
+	100%{left: 30%;top: 3%;}
 }
 
 
@@ -77,9 +79,9 @@ html,body{
 	position: absolute;
 	left: -20%;
 	top: 60%;
-	color: #DCE905;
-	font-size: 1.5vw;
-	font-family: sans-serif;
+	color: #D3E36B;
+	font-size: 4vw;
+	font-family: 'Bitter', serif;
 	font-style: initial; 
 	font-weight: bold;
 	text-decoration: none;
@@ -87,6 +89,11 @@ html,body{
 	animation-duration: 4s;
 	animation-delay: 2s; 
 	animation-fill-mode: forwards;
+}
+
+ .leftLink:hover {
+	color: #70898F;
+	font-style: italic; 
 }
 
 
@@ -98,11 +105,11 @@ html,body{
 
 .rightLink{
 	position: absolute;
-	right: -20%;
+	right: -30%;
 	top: 60%;
-	color: #DCE905;
-	font-style: italic;
-	font-size: 1.5vw;
+	color:  #D3E36B;
+	font-style: initial;
+	font-size: 4vw;
 	font-family: sans-serif;
 	font-weight: bold;
 	text-decoration: none;
@@ -112,9 +119,102 @@ html,body{
 	animation-fill-mode: forwards;
 }
 
+.rightLink:hover{
+	color:#70898F;
+	font-style: italic; 
+}
+
 
 @keyframes rLink{
-	0%{top: 60%;right:  -20%}
+	0%{top: 60%;right:  -30%}
 	100%{right:  1%;top: 60%;}
+}
+
+
+@media (max-width: 700px){
+
+.headingPosition{
+	left: 33%;
+	top: -20%; 
+	animation: heading;
+	animation-duration: 4s;
+	animation-delay: 2s; 
+	animation-fill-mode: forwards;
+}
+
+@keyframes heading{
+	0%{top: -20%;left: 33%}
+	100%{left: 33%;top: 2%;}
+}
+
+
+.namePosition{
+	left: 35%;
+	bottom:  -20%;
+	animation: name;
+	animation-duration: 4s;
+	animation-delay: 2s;
+	animation-fill-mode: forwards; 
+}
+
+
+@keyframes name{
+	0%{bottom:  -20%;left: 38%}
+	100%{left: 38%;top:  80%;}
+}
+
+
+.leftLink{
+	font-size: 5vw;
+	left: -30%;
+	top: 30%;
+	animation: lLink;
+	animation-duration: 4s;
+	animation-delay: 2s; 
+	animation-fill-mode: forwards;
+}
+
+
+@keyframes lLink{
+	0%{top: 30%;left: -20%}
+	100%{left: 1%;top: 30%;}
+}
+
+
+
+.rightLink{
+	font-size: 5vw;
+	right: -30%;
+	top: 30%;
+	animation: rLink;
+	animation-duration: 4s;
+	animation-delay: 2s; 
+	animation-fill-mode: forwards;
+}
+
+
+@keyframes rLink{
+	0%{top: 30%;right:  -30%}
+	100%{right:  1%;top: 30%;}
+}
+
+
+
+
+}
+
+
+.size{
+	width: 50px;
+	height: 50px;
+	margin: 20px;
+}
+
+.row{
+	background: #000;
+}
+
+h1{
+	margin-top: 0;
 }
 
