--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -1,220 +1,107 @@
-html,body{
- 
-	height: 100%;
+*{
+     padding: 0;
     margin: 0;
-
 }
 
 
-.homeBackground {
-  
-  background-image: url("../images/homeBackground2.jpg");
-  color: #fff;
-  
-  
-  height: 100%; 
+body {
+        background-image: url("../images/homeBackground.jpg");
+        background-blend-mode: lighten;
+        background-color: rgba(255,255,255,0.2);
+    }
 
-  
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 
-  animation: backImage;
-  animation-duration: 30s;
-  animation-iteration-count: infinite;
-  animation-fill-mode: forwards; 
-}
-
-@keyframes backImage{
-	0%{background-image: url("../images/homeBackground2.jpg");}
-	50%{background-image: url("../images/homeBackground1.jpg");}
-	100%{background-image: url("../images/homeBackground2.jpg");}
+p{
+        padding: 20px;
+        background: rgba(0, 0, 0, 0.5);
+        color: #fff;
+        font: 18px Arial, sans-serif;
 }
 
 
-
-.namePosition{
-	position: absolute;
-	left: 35%;
-	bottom:  -30%;
-	color: #05E9DD;
-	font-size: 5vw;
-	font-family: helvetica;
-	animation: name;
-	animation-duration: 4s;
-	animation-delay: 2s;
-	animation-fill-mode: forwards; 
+ul{
+    list-style-type: none;
+    overflow: hidden;
+    background-color: #dddddd;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 
 
-@keyframes name{
-	0%{bottom:  -30%;left: 35%}
-	100%{left: 35%;bottom:  8%;}
+li{
+    float: left;
 }
 
 
-.headingPosition{
-	position: absolute;
-	left: 30%;
-	top: -30%;
-	color: #9D0DEE;
-	font-size: 6vw;
-	font-family: helvetica;
-	font-style: italic;
-	font-weight: bold; 
-	animation: heading;
-	animation-duration: 4s;
-	animation-delay: 2s; 
-	animation-fill-mode: forwards;
+li a{
+    display: block;
+    text-decoration: none;
+    padding: 8px 40px;
+    font-size: 20px;
+    font-family: 'Lexend Deca', sans-serif;
+    font-weight: bold;
+    color: #0788F7;
 }
 
-@keyframes heading{
-	0%{top: -30%;left: 30%}
-	100%{left: 30%;top: 3%;}
-}
-
-
-
-.leftLink{
-	position: absolute;
-	left: -20%;
-	top: 60%;
-	color: #D3E36B;
-	font-size: 4vw;
-	font-family: 'Bitter', serif;
-	font-style: initial; 
-	font-weight: bold;
-	text-decoration: none;
-	animation: lLink;
-	animation-duration: 4s;
-	animation-delay: 2s; 
-	animation-fill-mode: forwards;
-}
-
- .leftLink:hover {
-	color: #70898F;
-	font-style: italic; 
-}
-
-
-@keyframes lLink{
-	0%{top: 60%;left: -20%}
-	100%{left: 1%;top: 60%;}
-}
-
-
-.rightLink{
-	position: absolute;
-	right: -30%;
-	top: 60%;
-	color:  #D3E36B;
-	font-style: initial;
-	font-size: 4vw;
-	font-family: sans-serif;
-	font-weight: bold;
-	text-decoration: none;
-	animation: rLink;
-	animation-duration: 4s;
-	animation-delay: 2s; 
-	animation-fill-mode: forwards;
-}
-
-.rightLink:hover{
-	color:#70898F;
-	font-style: italic; 
-}
-
-
-@keyframes rLink{
-	0%{top: 60%;right:  -30%}
-	100%{right:  1%;top: 60%;}
-}
-
-
-@media (max-width: 700px){
-
-.headingPosition{
-	left: 33%;
-	top: -20%; 
-	animation: heading;
-	animation-duration: 4s;
-	animation-delay: 2s; 
-	animation-fill-mode: forwards;
-}
-
-@keyframes heading{
-	0%{top: -20%;left: 33%}
-	100%{left: 33%;top: 2%;}
-}
-
-
-.namePosition{
-	left: 35%;
-	bottom:  -20%;
-	animation: name;
-	animation-duration: 4s;
-	animation-delay: 2s;
-	animation-fill-mode: forwards; 
-}
-
-
-@keyframes name{
-	0%{bottom:  -20%;left: 38%}
-	100%{left: 38%;top:  80%;}
-}
-
-
-.leftLink{
-	font-size: 5vw;
-	left: -30%;
-	top: 30%;
-	animation: lLink;
-	animation-duration: 4s;
-	animation-delay: 2s; 
-	animation-fill-mode: forwards;
-}
-
-
-@keyframes lLink{
-	0%{top: 30%;left: -20%}
-	100%{left: 1%;top: 30%;}
-}
-
-
-
-.rightLink{
-	font-size: 5vw;
-	right: -30%;
-	top: 30%;
-	animation: rLink;
-	animation-duration: 4s;
-	animation-delay: 2s; 
-	animation-fill-mode: forwards;
-}
-
-
-@keyframes rLink{
-	0%{top: 30%;right:  -30%}
-	100%{right:  1%;top: 30%;}
+li a:hover {
+    background-color: #555;
+    color: white;
 }
 
 
 
 
+
+
+.centreElement{
+    text-align: center;
 }
 
 
-.size{
-	width: 50px;
-	height: 50px;
-	margin: 20px;
+.textStyling{
+    font-family: 'Lexend Deca', sans-serif;
+    color: #fff;
 }
 
-.row{
-	background: #000;
+.transparentContainer{
+
+        padding: 20px;
+        background: rgba(200, 200, 200, 0.1);
+        color: #fff;
+
 }
 
-h1{
-	margin-top: 0;
+
+
+
+
+
+
+  /* IDs   */
+
+#homeImage{
+    height: 300px;
+    width: 300px;
+    background-image: url("../images/nat1.jpg");
+    background-size: cover;
+    transform: rotate(90deg);
+    position: 5px;
+    border: 2px #fff dashed;
+    animation: fadeInImage;
+    animation-duration: 4s;
 }
 
+@keyframes fadeInImage{
+    0%{opacity: 0}
+    20%{opacity: 0.2}
+    40%{opacity: 0.4}
+    60%{opacity: 0.6}
+    80%{opacity: 0.8}
+    100%{opacity: 1}
+}
+
+#homeImage:hover{
+    border-radius: 50%;
+    box-shadow: 40px 40px 40px #888888;
+}
