--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -23,9 +23,11 @@ ul{
     list-style-type: none;
     overflow: hidden;
     background-color: #dddddd;
+    opacity: 0.88;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 
 
@@ -52,6 +54,19 @@ li a:hover {
 
 
 
+   /* Classes*/
+
+
+
+.wrapper{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-column-gap: 7em;
+}
+
+.nestedGrid , .nestedGridContact{
+    display: grid; 
+}
 
 
 .centreElement{
@@ -81,15 +96,16 @@ li a:hover {
   /* IDs   */
 
 #homeImage{
-    height: 300px;
-    width: 300px;
+    height: 400px;
+    width: 400px;
     background-image: url("../images/nat1.jpg");
     background-size: cover;
     transform: rotate(90deg);
-    position: 5px;
     border: 2px #fff dashed;
     animation: fadeInImage;
     animation-duration: 4s;
+    box-shadow: 10px 10px 40px #888888;
+    z-index: -1;
 }
 
 @keyframes fadeInImage{
@@ -101,7 +117,35 @@ li a:hover {
     100%{opacity: 1}
 }
 
-#homeImage:hover{
+#homeImage:hover{ 
     border-radius: 50%;
-    box-shadow: 40px 40px 40px #888888;
+}
+
+@media (max-width: 1200px){
+    #homeImage{
+        width: 300px;
+        height: 300px;
+    }
+
+    .wrapper , .nestedGridContact{
+        display: block; 
+    }
+
+}
+
+@media (max-width: 700px){
+    li{float: none;}
+
+    .nestedGridContact{
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 390px){
+
+    #homeImage{
+        height: 250px;
+        width: 250px;
+    }
 }
